# clarifi

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY-RAILWAY.md  DEPLOY.md  GETTING-STARTED.md  HOW-IT-WORKS.md  Procfile  SETUP.md  STATUS.md  pyproject.toml  railway.toml
alembic/: env.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: KPICards.tsx  OnboardingOverlay.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  supabase.ts
scripts/: generate_test_docs.py  run_watcher.py  seed_db.py
src/clarifi/: auth.py  config.py  llm.py  main.py  scheduler.py
src/clarifi/agent/: company_scope.py  context.py  graph.py  logging_middleware.py  prompts.py
src/clarifi/api/: chat.py  dashboard.py  decisions.py  documents.py  documents_api.py  files.py  folders.py  health.py  integrations.py  onboarding.py  scheduler_api.py  settings_api.py
src/clarifi/db/: session.py
src/clarifi/discovery/: watcher.py
src/clarifi/ingestion/: csv_parser.py  docx_parser.py  image_ocr_parser.py  parser_factory.py  pdf_parser.py  text_parser.py  xlsx_parser.py
src/clarifi/memory/: memu_client.py
src/clarifi/models/: __init__.py  alert.py  audit_log.py  bank_transaction.py  base.py  company.py  (+10 more)
test_documents/: contract_mentenanta_TechVision.txt  extras_cont_BRD_martie_2026.txt  factura_emisa_001.txt  factura_emisa_002_RetailMax.txt  factura_primita_AWS_martie.txt  factura_restanta_MobileApps.txt
tests/: conftest.py  test_agent_e2e.py  test_new_tools.py  test_skill_loader.py  test_tools.py  test_validators.py
(+51 files in other folders)
