[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarifi"
version = "0.1.0"
description = "Clarifi — AI financial assistant for services companies"
requires-python = ">=3.12"

dependencies = [
    "langgraph",
    "langchain-google-genai",
    "langchain-core",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "python-multipart",
    "pypdf",
    "python-docx",
    "pillow",
    "croniter",
    "httpx",
    "duckduckgo-search",
    "langgraph-checkpoint-sqlite",
    "langgraph-checkpoint-postgres",
    "asyncpg",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clarifi"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
